    * Filter for times now accept ranges (from ... until)

    Checks & Agents:
    * FIX: Made logwatch parsing mechanism a little more robust
      (Had problems with emtpy sections from windows agent)

    WATO:
    * Reimplemented folder listing in host/folders module
    * Redesigned the breadcrumb navigation
    * Global settings: make boolean switches directly togglable
    * FIX: fix page header after confirmation dialogs
    * FIX: Fixed umlaut problem in host aliases and ip addresses created by WATO
    * FIX: Fixed exception caused by validation problems during editing tags in WATO

1.2.0b2:
    Core:
    * FIX: Cluster host checks were UNKNOWN all the time
    * FIX: reset counter in case of (broken) future time
    * FIX: Automation try-inventory: Fixed problem on where checks which
      produce equal service descriptions could lead to invalid inventory
      results on cluster hosts.
    * FIX: do not create contacts if they won't be assigned to any host
      or service. Do *not* assign to dummy catch-all group "check_mk".

    WATO:
    * Added new permission "move hosts" to allow/deny moving of hosts in WATO
    * Also write out contact definitions for users without contactgroups to
      have the mail addresses and other notification options persisted
    * FIX: deletion of automation accounts now works
    * FIX: Disabling notifications for users does work now
    * New main overview for rule editor
    * New multisite.mk option wato_hide_varnames for hiding Check_MK 
      configuration variable names from the user
    * New module "Logwatch Pattern Analyzer" to verify logwatch rules
    * Added new variable logwatch_rules which can also be managed through the
      WATO ruleset editor (Host/Service Parameters > Parameters and rules for
      inventorized checks > Various applications > Logwatch Patterns)
    * Users & Contacts: Added new option wato_hidden_users which holds a list